--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 # These are supported funding model platforms
 
-custom: # ['https://ravi-docs.gitbook.io/ravi-documentation/']
+custom: # ['https://www.paypal.com/paypalme/jaez29']
