--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 # These are supported funding model platforms
 
-custom: # ['https://www.paypal.com/paypalme/jaez29']
+custom: # https://www.paypal.com/paypalme/jaez29
